crates/stackable-versioned-macros/tests/snapshots/stackable_versioned_macros__test__default_snapshots@skip_from_module.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/fixtures/inputs/default/skip_from_module.rs
---
#[automatically_derived]
pub(crate) mod v1alpha1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
    }
}
#[automatically_derived]
pub(crate) mod v1beta1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
    }
}
